added more functionality

--- a/src/app/authors/authors.component.html
+++ b/src/app/authors/authors.component.html
@@ -6,4 +6,11 @@
 
 <p>There are {{noOfAuthors}} authors in this list! This was found using a service!<p>
 
+<p>Authors whose name starts with J are:</p>
+<ul>
+    <li *ngFor="let authorswJ of startingwJ">
+        {{authorswJ}}
+    </li>
+</ul>
+
 </ul>
